unity-api (7.97) UNRELEASED; urgency=medium

  * Remove ApplicationManagerInterface.forceDashActive
  * Remove ApplicationManagerInterface.suspended

 -- Daniel d'Andrada <daniel.dandrada@canonical.com>  Thu, 30 Apr 2015 16:14:17 -0300

unity-api (7.96+15.04.20150410.2-0ubuntu1) vivid; urgency=medium

  [ CI Train Bot ]
  * New rebuild forced.

  [ Michi Henning ]
  * Reverted commit 93 because it cost me a cool 1.5 hours today. Turns
    out that libmcheck is not thread-safe and causes the most amazing
    crashes in unpredictable ways :-(

 -- CI Train Bot <ci-train-bot@canonical.com>  Fri, 10 Apr 2015 16:07:39 +0000

unity-api (7.96+15.04.20150213-0ubuntu1) vivid; urgency=medium

  [ Pawel Stolowski ]
  * Added close method to scopes interface.

 -- CI Train Bot <ci-train-bot@canonical.com>  Fri, 13 Feb 2015 15:15:59 +0000

unity-api (7.95+15.04.20150211-0ubuntu1) vivid; urgency=medium

  [ Michael Zanetti ]
  * add onlyPinned property to launcher model

  [ Michał Sawicz ]
  * Add :native to g++ dependency for cross-building and wrap-and-sort
    for good measure. Python needs :any, too. (LP: #1353855)

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Wed, 11 Feb 2015 16:28:29 +0000

unity-api (7.94+15.04.20141205-0ubuntu1) vivid; urgency=medium

  [ Albert Astals Cid ]
  * Add setFavorite/moveFavoriteTo

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 05 Dec 2014 10:51:44 +0000

unity-api (7.93+15.04.20141104-0ubuntu1) vivid; urgency=medium

  [ Michael Zanetti ]
  * add a signal to the launcher model to hint changes

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Tue, 04 Nov 2014 14:42:57 +0000

unity-api (7.92+14.10.20141003.1-0ubuntu1) utopic; urgency=medium

  [ Michael Zanetti ]
  * Add dashActive property to application api

  [ Ubuntu daily release ]
  * New rebuild forced

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 03 Oct 2014 16:52:41 +0000
