@@ -2,6 +2,7 @@ unity-api (7.97) UNRELEASED; urgency=medium
 
   * Remove ApplicationManagerInterface.forceDashActive
   * Remove ApplicationManagerInterface.suspended
+  * ApplicationInfoInterface: add suspend() and resume()
 
  -- Daniel d'Andrada <daniel.dandrada@canonical.com>  Thu, 30 Apr 2015 16:14:17 -0300
 
